# open-med-calc

./: Cargo.toml  extract-js.bash
examples/: example.rs  parse-conditionality.rs  parse-equation.rs  parse.rs
scraped/: 10001-fatty-liver-index.json  10002-rome-iv-diagnostic-criteria-functional-dyspepsia.json  10003-rome-iv-diagnostic-criteria-functional-constipation.json  10004-intrauterine-rbc-transfusion-dosage.json  10005-cryoprecipitate-dosing-fibrinogen-replacement.json  10006-neonatal-partial-exchange-polycythemia.json  10007-embolic-stroke-undetermined-source-esus-criteria.json  10008-revised-schwartz-equation-glomerular-filtration-rate-gfr-2009.json  10009-peripheral-blood-stem-cell-collection.json  10010-maternal-fetal-hemorrhage-rhd-immune-globulin-dosage.json  10011-rbc-units-screen-compatibility.json  10012-donor-lymphocyte-infusion-dli-volume.json  10013-therapeutic-plasmapheresis-calculator.json  10014-impact-score-outcomes-head-injury.json  10016-dual-antiplatelet-therapy-dapt-score.json  10017-bristol-stool-form-scale.json  10018-akin-classification-acute-kidney-injury-aki.json  10019-rifle-criteria-acute-kidney-injury-aki.json  10020-action-icu-score-intensive-care-nstemi.json  10022-ariscat-score-postoperative-pulmonary-complications.json  10023-leiden-clinical-prediction-rule-undifferentiated-arthritis.json  10024-asa-physical-status-asa-classification.json  10025-ocular-hypertension-treatment-study-ohts-calculator.json  10027-recognition-stroke-emergency-room-rosier-scale.json  10028-four-full-outline-unresponsiveness-score.json  10029-cart-cardiac-arrest-risk-triage-score.json  10030-choles-score-duration-laparoscopic-cholecystectomy.json  10031-reach-b-score-hepatocellular-carcinoma-hcc.json  10032-asas-criteria-peripheral-spondyloarthritis-spa.json  10033-go-far-good-outcome-following-attempted-resuscitation-score.json  10034-slicc-criteria-systemic-lupus-erythematosus-sle-2012.json  10035-dire-score-opioid-treatment.json  10036-ascod-algorithm-ischemic-stroke.json  10038-braden-score-pressure-ulcers.json  10039-caspar-criteria-psoriatic-arthritis.json  10040-duval-cibmtr-score-acute-myelogenous-leukemia-aml-survival.json  10041-cytokine-release-syndrome-crs-grading.json  10042-oakland-score-safe-discharge-lower-gi-bleed.json  10043-hamilton-depression-rating-scale-ham-d.json  10044-montreal-cognitive-assessment-moca.json  (+661 more)
scripts/: Cargo.toml
(+709 files in other folders)
