[package]
name = "open-med-survey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = { version = "0.10.4", default-features = false }
html = "0.6.1"
ratatui = "0.23.0"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"

[workspace]
members = ["scripts"]

[dev-dependencies]
include_dir = "0.7.3"
itertools = "0.11.0"
pretty_assertions = "1.4.0"
serde_path_to_error = "0.1.14"
unicode-ident = "1.0.11"
