[package]
name = "open-med-survey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
either = "1.9.0"
select = "0.6.0"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.47"
unicode-ident = "1.0.11"
url = "2.4.1"
itertools = "0.11.0"
include_dir = "0.7.3"
html = "0.6.1"
boa_engine = "0.17.0"

[workspace]
members = ["scripts"]

[dev-dependencies]
boa_ast = "0.17.0"
boa_interner = "0.17.0"
boa_parser = "0.17.0"
pretty_assertions = "1.4.0"
serde_path_to_error = "0.1.14"
